--- a/css/estilo.css
+++ b/css/estilo.css
@@ -76,5 +76,36 @@ header .navbar ul li a:hover{
 	background: #0040FF;
 	color:white;
 	border-radius: 5px;
+	transition: background 0.4s, color 0.3s;
 }
 
+/*Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+	.desaparecer{
+		display: none;
+	}
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) { 
+	.desaparecer{
+		display: none;
+	}
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+	.desaparecer{
+		display: none;
+	}
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+
+}
